// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create recipe when logged in as an admin and the recipe is valid Returns the expected result 1`] = `
Object {
  "imageUrlSmall": "http://image.com",
  "isVegan": true,
  "isVegetarian": false,
  "linkUrl": "http://new.com",
  "name": "new-recipe",
  "primaryFoodInRecipeIds": Array [
    "c6f78568-fe23-47e4-8e65-55934199a39f",
  ],
  "secondaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
  ],
}
`;

exports[`delete recipes when logged in as an admin Returns the expected result 1`] = `
Object {
  "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
  "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
  "isVegan": false,
  "isVegetarian": false,
  "linkUrl": "https://apple-beetroot-and-cheese.com",
  "name": "Apple, Beetroot & Meat",
  "primaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
    "c6f78568-fe23-47e4-8e65-55934199a39f",
  ],
  "secondaryFoodInRecipeIds": Array [],
}
`;

exports[`get all recipes when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
    "imageUrlSmall": "https://pickled-beetroot.com/image",
    "isVegan": true,
    "isVegetarian": false,
    "linkUrl": "https://pickled-beetroot.com",
    "name": "Pickled Beetroot",
    "primaryFoodInRecipeIds": Array [
      "c6f78568-fe23-47e4-8e65-55934199a39f",
    ],
    "secondaryFoodInRecipeIds": Array [],
  },
  Object {
    "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
    "imageUrlSmall": "https://apple-and-cheese.com/image",
    "isVegan": false,
    "isVegetarian": true,
    "linkUrl": "https://apple-and-cheese.com",
    "name": "Apple, Cheese & Onion",
    "primaryFoodInRecipeIds": Array [
      "dd9ba012-8f8e-48af-9775-0139374dd94c",
    ],
    "secondaryFoodInRecipeIds": Array [
      "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
    ],
  },
  Object {
    "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
    "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
    "isVegan": false,
    "isVegetarian": false,
    "linkUrl": "https://apple-beetroot-and-cheese.com",
    "name": "Apple, Beetroot & Meat",
    "primaryFoodInRecipeIds": Array [
      "dd9ba012-8f8e-48af-9775-0139374dd94c",
      "c6f78568-fe23-47e4-8e65-55934199a39f",
    ],
    "secondaryFoodInRecipeIds": Array [],
  },
]
`;

exports[`get single recipe when logged in as an admin Returns the expected result 1`] = `
Object {
  "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
  "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
  "isVegan": false,
  "isVegetarian": false,
  "linkUrl": "https://apple-beetroot-and-cheese.com",
  "name": "Apple, Beetroot & Meat",
  "primaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
    "c6f78568-fe23-47e4-8e65-55934199a39f",
  ],
  "secondaryFoodInRecipeIds": Array [],
}
`;
